apps/pgadmin/service-pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pgadmin
  name: pgadmin
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: pgadmin
