apps/pgadmin/ingress-pgadmin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  ingressClassName: cilium
  rules:
  - host: pgadmin.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - pgadmin.almothana.xyz
      secretName: almothana-xyz-tls
